--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,7 @@
 !README.md
 *.html
 llf.py
-locustfile.py
-only_locust.py
-sakir_tests.py
 base/conf_actual.py
 automation.log
+*.bat
+test_task_log.txtg
